로그인 회원가입 view 구현
로그인 회원가입 view 구현

--- a/src/main/webapp/WEB-INF/commandHandler.properties
+++ b/src/main/webapp/WEB-INF/commandHandler.properties
@@ -1,2 +1,5 @@
 home.do=home.HomeService
 summonerRanking.do=summonerRanking.SummonerRankingService
+login.do=login.LoginService
+register.do=register.RegisterService
+registerAction.do=register.RegisterService
