회원가입, 이메일 인증, 로그아웃 기능 구현
회원가입, 이메일 인증, 로그아웃 기능 구현

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 /src/main/java/util/APIKey.java
 /src/main/java/util/DatabaseUtil.java
+/src/main/java/util/Mail.java
 
 ### Eclipse ###
 .metadata
