--- a/src/main/webapp/WEB-INF/commandHandler.properties
+++ b/src/main/webapp/WEB-INF/commandHandler.properties
@@ -1,5 +1,7 @@
 home.do=home.HomeService
 summonerRanking.do=summonerRanking.SummonerRankingService
-login.do=login.LoginService
-register.do=register.RegisterService
-registerAction.do=register.RegisterService
+login.do=users.LoginService
+logout.do=users.LogoutService
+register.do=users.RegisterService
+registerAction.do=users.RegisterService
+emailCheck.do=users.EmailCheckService
