게시판글 목록 및 글 작성

--- a/src/main/webapp/WEB-INF/commandHandler.properties
+++ b/src/main/webapp/WEB-INF/commandHandler.properties
@@ -1,7 +1,12 @@
 home.do=home.HomeService
 summonerRanking.do=summonerRanking.SummonerRankingService
 login.do=users.LoginService
+loginAction.do=users.LoginService
 logout.do=users.LogoutService
 register.do=users.RegisterService
 registerAction.do=users.RegisterService
 emailCheck.do=users.EmailCheckService
+board.do=board.BoardService
+boardWrite.do=board.BoardService
+boardWriteAction.do=board.BoardService
+boardRead.do=board.BoardReadService
