--- a/src/main/webapp/WEB-INF/commandHandler.properties
+++ b/src/main/webapp/WEB-INF/commandHandler.properties
@@ -10,3 +10,8 @@ board.do=board.BoardService
 boardWrite.do=board.BoardService
 boardWriteAction.do=board.BoardService
 boardRead.do=board.BoardReadService
+boardModify.do=board.BoardModifyService
+boardModifyAction.do=board.BoardModifyActionService
+boardRemoveAction.do=board.BoardRemoveActionService
+boardSearch.do=board.BoardSearchService
+summonerSearch.do=summoner.SummonerSearchService
